--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,17 +15,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: swift:5.9  # Използва официалния Swift контейнер
+      image: swift:6.0
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: swift package resolve
-
       - name: Build Swift Project
-        run: swift build --configuration release
+        run: swift build
 
       - name: Run Tests
         run: swift test
