--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
-
 name: Swift CI Pipeline
 
 on:
@@ -15,14 +12,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: swift:6.0
+      image: swift:5.9
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Build Swift Project
-        run: swift build
+      - name: List Files (Debug)
+        run: ls -la
 
-      - name: Run Tests
-        run: swift test
+      - name: Compile Swift File
+        run: swiftc main.swift -o myApp
+
+      - name: Run Compiled App
+        run: ./myApp
