--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: swift:5.9
+      image: swift:6.0
 
     steps:
       - name: Checkout Repository
@@ -22,7 +22,7 @@ jobs:
         run: ls -la
 
       - name: Compile Swift File
-        run: swiftc main.swift -o myApp
+        run: swiftc GitHubCLI/Sources/main.swift -o myApp
 
       - name: Run Compiled App
         run: ./myApp
