--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     container:
       image: swift:6.0
@@ -18,11 +18,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: List Files (Debug)
-        run: ls -la
+      - name: Show Project Structure (Debugging)
+        run: ls -R
 
-      - name: Compile Swift File
-        run: swiftc GitHubCLI/Sources/main.swift -o myApp
+      - name: Build Swift Package
+        run: swift build --configuration release
 
-      - name: Run Compiled App
-        run: ./myApp
+      - name: Run Tests
+        run: swift test
